--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <span class="jg-img"></span>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>Hi, my name is James Grant. I am full stack web developer and mobile app developer with 3 years experience based in the west country. I am currently working at Nudge Digital where I have been building a variety of different things from <kbd>Drupal</kbd> sites to <kbd>Android</kbd> and <kbd>iOS</kbd> apps while working with MVC frameworks such as <kbd>Codeignighter</kbd> and <kbd>Symfony</kbd>.</p>
+                <p>Hi, my name is James Grant. I am full stack web and mobile app developer with 3 years experience based in the west country. I am currently working for Nudge Digital where I have been building a variety of different things from <kbd>Drupal</kbd> sites to <kbd>Android</kbd> and <kbd>iOS</kbd> apps while also working with MVC frameworks such as <kbd>Codeignighter</kbd> and <kbd>Symfony</kbd>.</p>
 
-                <p>I like to work with all sorts of different languages and frameworks but things that I have the most experience working with are:</p>
-                <p><kbd>Drupal</kbd>, <kbd>Symfony</kbd>, <kbd>Android</kbd>, <kbd>iOS</kbd>, <kbd>CodeIgniter</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>JQuery</kbd>, <kbd>Angular</kbd>, <kbd>Gulp</kbd> and <kbd>Heroku</kbd>.</p>
+                <p>I like making nice simple UI thats quick and easy to use giving users a good experience. I can work with all sorts of different languages and frameworks but the things that I have the most experience working with are:</p>
+                <p><kbd>Drupal</kbd>, <kbd>Symfony</kbd>, <kbd>Android</kbd>, <kbd>iOS</kbd>, <kbd>CodeIgniter</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>JQuery</kbd>, <kbd>Angular</kbd>, <kbd>git</kbd>, <kbd>Gulp</kbd> and <kbd>Heroku</kbd>.</p>
             </div>
         </div>
     </div>
@@ -86,17 +86,63 @@
     </div>
 
     <div class="container work-container">
-        <h3>Work Experience</h3>
+        <h3>Experience</h3>
+        <div class="row clearfix">
+            <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+                <h4>Nudge Digital</h4>
+                <a href="http://www.nudgedigital.co.uk/" target="_blank">www.nudgedigital.co.uk</a>
+                <p>August 2014 - Present</p>
+                <p>Developer</p>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-9">
+                <p>Over the past year with nudge I have been able to work on a large number of projects ranging from small Drupal sites to large enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations. At Nudge I have also been given to oppertunity to work with all of my core skills and also to gain new skills in things such as <kbd>Symfony</kbd>, <kbd>Angular</kbd> and <kbd>Gulp</kbd>.</p>
+                <p>During my time at nudge I have also been able to help the lead developer with the writing of Technical Specifications and also Project Requirements. I feel this is a usefull skill to have as it helps me to become and even more well-rounded developer.</p>
+                <p>During the summer I had the opertunity to head to Accra, Ghana and work with the team out there. This was a great opertunity to learn more about the industry in another country but also to allow me to lead their team for a few weeks and gain lots of experince of remote teams.</p>
+            </div>
+        </div>
 
+        <div class="row clearfix project-2">
+            <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+                <h4>GWS Media</h4>
+                <a href="http://www.gwsmedia.com/" target="_blank">www.gwsmedia.com/</a>
+                <p>June 2012 - August 2014</p>
+                <p>Programmer</p>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-9">
+                <p>I started working for GWS Media part time during my third year at University and continued full time once I had graduated. It was during this role that I learnt many of the fundamentals that I have been building on over the past 3 years. Whilst at GWS I had the oppertunity to work with: <kbd>Drupal</kbd>, <kbd>Magento</kbd>, <kbd>Bootstrap</kbd>, <kbd>Codeigniter</kbd>, <kbd>Android</kbd> and <kbd>iOS</kbd>.</p>
+                <p>I feel like having the oppertunity to use to many different tools early on in my career had given me the drive to always want to try new tools and frameworks.</p>
+            </div>
+        </div>
     </div>
 
     <div class="container education-container">
         <h3>Education</h3>
+        <div class="row clearfix">
+            <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+                <h4>Bristol University</h4>
+                <p>2010 - 2013</p>
+                <p>BSc Computer Science</p>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-9">
+                <p>During my degree at Bristol University I learnt lots of key skill such as team work and project management. Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advange in my day to day work.</p>
+                <p>While at Bristol Uni I also spent a lot of my free time with the Kitesurfing society. I spent 3 years on the committe as a Secreatary, Trip Rep and then Media and Promotions manager. During this time I took on roles from organising transport and designing posters to Orgamising a trip to Portugal for over 30 students.</p>
+            </div>
+        </div>
+    </div>
 
+    <div class="container more-container">
+        <h3>When I'm not programming</h3>
+        <div class="row clearfix">
+            <div class="col-md-12">
+                <p>When I'm not sat at my desk I like to try and be quite active and get outside. I have a great interest in photography and videography, especially of extreme sports, so I like to try and get out to some interesting places and be creative. I like to showcase my work over here if you would like to check it out - <a href="http://jwgmedia.co.uk/" target="_blank">jwgmedia.co.uk</a>.</p>
+                <p>Since my time at Uni I have also become a very keen Kitesurfer and freestyle Landboarder. In 2014 I competed and won the amature landboard British powerkite tour.</p>
+                <p>Finaly during the rest of my free time you will either find me out on my road bike, rock climbing at one of Bristols indoor climbing centers or down the Rec supporting Bath Rugby.</p>
+            </div>
+        </div>
     </div>
 
     <div class="container footer-container">
-        <p>James Grant - <a href="mailto:james@jwgmedia.co.uk" target="_blank">james@jwgmedia.co.uk</a> - <a href="tel:07944652549" target="_blank">07944652549</a></p>
+        <p>James Grant - <a href="mailto:james@jwgmedia.co.uk" target="_blank">james@jwgmedia.co.uk</a> - <a href="tel:07944652549" target="_blank">07944652549</a> - References on request</p>
     </div>
 
 </body>
