--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
         <link rel="stylesheet" href="/jamesgrant.css">
 
+        <link rel="shortcut icon" href="http://jwgmedia.co.uk/sites/default/files/JWGMediaICON.ico" type="image/vnd.microsoft.icon" />
+
     </head>
     <body>
 
