final tweaks to spelling and grammar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -48,10 +47,10 @@
                 <span class="jg-img"></span>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>Hi, my name is James Grant. I am full stack web and mobile app developer with 3 years experience based in the west country. I am currently working for Nudge Digital where I have been building a variety of different things from <kbd>Drupal</kbd> sites to <kbd>Android</kbd> and <kbd>iOS</kbd> apps while also working with MVC frameworks such as <kbd>Codeignighter</kbd> and <kbd>Symfony</kbd>.</p>
+                <p>Hi, my name is James Grant. I'm a full stack web and mobile app developer with 3 years experience based in the west country. I am currently working for Nudge Digital where I have been building a variety of different products from <kbd>Drupal</kbd> sites to <kbd>Android</kbd> and <kbd>iOS</kbd> apps while also working with MVC frameworks such as <kbd>CodeIgniter</kbd> and <kbd>Symfony</kbd>.</p>
 
-                <p>I like making nice simple UI thats quick and easy to use giving users a good experience. I can work with all sorts of different languages and frameworks but the things that I have the most experience working with are:</p>
-                <p><kbd>Drupal</kbd>, <kbd>Symfony</kbd>, <kbd>Android</kbd>, <kbd>iOS</kbd>, <kbd>CodeIgniter</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>JQuery</kbd>, <kbd>Angular</kbd>, <kbd>git</kbd>, <kbd>Gulp</kbd> and <kbd>Heroku</kbd>.</p>
+                <p>I like making nice simple UI thats quick and easy to use whilst giving users an enjoyable experience. I have worked with a range of different languages and frameworks and I am always looking for opportunities to work with something new. The things that I have the most experience working with are:</p>
+                <p><kbd>PHP</kbd>, <kbd>MySQL</kbd>, <kbd>Drupal</kbd>, <kbd>Symfony</kbd>, <kbd>Android</kbd>, <kbd>iOS</kbd>, <kbd>CodeIgniter</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>JQuery</kbd>, <kbd>Angular</kbd>, <kbd>git</kbd> and <kbd>Gulp</kbd>.</p>
             </div>
         </div>
     </div>
@@ -66,8 +65,8 @@
                 <a href="https://github.com/sproogen/ForecastrApp" target="_blank"><i class="fa fa-github"></i></a>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p class="quote">Forecastr is an android app designed to make it easy to view your favourite spots. Targeted at sports where the weather is key to a good session forecastr makes it quick to see which spot is best all on one screen. Forecastr includes wind, weather, swell and tide times all in one place.</p>
-                <p>Forecastr is an app I have been building as I have a keen interest in <kbd>android</kbd> development and wanted a personal project I could use to build my skills. I choose to build this app as I felt like its something I would use myself and also something that would set some good chalenges in lots of different areas of the build.</p>
+                <p class="quote">Forecastr is an android app designed to make it easy to view the forecast at your favourite spots. Targeted at sports where the weather is key to a good session forecastr makes it quick to see which spot is best all on one screen. Forecastr includes wind, weather, swell and tide times.</p>
+                <p>Forecastr is an app I have been building as I have a keen interest in <kbd>Android</kbd> development and wanted a personal project I could use to help build my skills. I choose to build this app as I felt like it's something I would use myself and also something that would set some good challenges across lots of different areas of the build.</p>
                 <p>During the build I have utilised a number of different android libraries such as ActionBarSherlock, Dagger and Otto. As well as these the app also talks to a backend API and uses a SQLite DB.</p>
             </div>
         </div>
@@ -80,9 +79,9 @@
                 <a href="https://github.com/sproogen/itsgoingto.be" target="_blank"><i class="fa fa-github"></i></a>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p class="quote">itsgoingto.be is a simple voting site where a user can ask a questiong and choose some options. This question can then be shared with their friends/colleagues to vote on things like 'Where should we go for lunch?'. </p>
-                <p>The backend for this site has been build using <kbd>Symfony</kbd> while on the front end I have used <kbd>SASS</kbd>, Bourbon.io, Neat and <kbd>Jquery</kbd>. The front-end assets are being compiled and minified using <kbd>Gulp</kbd> so this can be easily auto-deployed using <kbd>Heroku</kbd></p>
-                <p>I have really enjoyed working with the codebase I have created on this project as it has allowed me to build on my exisiting skills while play around and learn some new useful skills.</p>
+                <p class="quote">itsgoingto.be is a simple voting site where a user can ask a question or topic top put to a vote. This question can then be shared with their friends/colleagues to vote on things like 'Where should we go for lunch?'.</p>
+                <p>The backend for this site has been build using <kbd>Symfony</kbd> while on the front-end I have used <kbd>SASS</kbd>, Bourbon.io, Neat and <kbd>JQuery</kbd>. The front-end assets are being compiled and minified using <kbd>Gulp</kbd> so this can be easily auto-deployed on <kbd>Heroku</kbd></p>
+                <p>I have really enjoyed working on this project as I have been able to create a really nice codebase that is fun to work with, and also play with some nice components that I wouldn't usually have the time to work with.</p>
             </div>
         </div>
     </div>
@@ -97,9 +96,9 @@
                 <p>Developer</p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>Over the past year with nudge I have been able to work on a large number of projects ranging from small Drupal sites to large enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations. At Nudge I have also been given to oppertunity to work with all of my core skills and also to gain new skills in things such as <kbd>Symfony</kbd>, <kbd>Angular</kbd> and <kbd>Gulp</kbd>.</p>
-                <p>During my time at nudge I have also been able to help the lead developer with the writing of Technical Specifications and also Project Requirements. I feel this is a usefull skill to have as it helps me to become and even more well-rounded developer.</p>
-                <p>During the summer I had the opertunity to head to Accra, Ghana and work with the team out there. This was a great opertunity to learn more about the industry in another country but also to allow me to lead their team for a few weeks and gain lots of experince of remote teams.</p>
+                <p>Over the past year with nudge I have been able to work on a large number of projects ranging from small Drupal sites to large enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations. At Nudge I have also been given the oppertunity to work with all of my core skills and also to gain new skills in things such as <kbd>Symfony</kbd>, <kbd>Angular</kbd> and <kbd>Gulp</kbd>.</p>
+                <p>During my time at Nudge I have also been able to help the lead developer with the writing of Technical Specifications and also Project Requirements. I feel this is a useful skill to have as it helps me to become an even more well-rounded developer.</p>
+                <p>During the summer I had the opportunity to head to Accra, Ghana and work with the team out there. This was a great opportunity to learn more about the industry in another country but also to allow me to lead their team for a few weeks and gain lots of experience of remote teams.</p>
             </div>
         </div>
 
@@ -111,8 +110,8 @@
                 <p>Programmer</p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>I started working for GWS Media part time during my third year at University and continued full time once I had graduated. It was during this role that I learnt many of the fundamentals that I have been building on over the past 3 years. Whilst at GWS I had the oppertunity to work with: <kbd>Drupal</kbd>, <kbd>Magento</kbd>, <kbd>Bootstrap</kbd>, <kbd>Codeigniter</kbd>, <kbd>Android</kbd> and <kbd>iOS</kbd>.</p>
-                <p>I feel like having the oppertunity to use to many different tools early on in my career had given me the drive to always want to try new tools and frameworks.</p>
+                <p>I started working for GWS Media part time during my third year at University and continued full time once I had graduated. It was during this role that I learnt many of the fundamentals that I have been building on over the past 3 years. Whilst at GWS I had the opportunity to work with: <kbd>Drupal</kbd>, <kbd>Magento</kbd>, <kbd>Bootstrap</kbd>, <kbd>Codeigniter</kbd>, <kbd>Android</kbd> and <kbd>iOS</kbd>.</p>
+                <p>I feel like having the opportunity to use a large range of different things early on in my career has given me the drive to always want to try new tools and frameworks.</p>
             </div>
         </div>
     </div>
@@ -126,8 +125,8 @@
                 <p>BSc Computer Science</p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>During my degree at Bristol University I learnt lots of key skill such as team work and project management. Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advange in my day to day work.</p>
-                <p>While at Bristol Uni I also spent a lot of my free time with the Kitesurfing society. I spent 3 years on the committe as a Secreatary, Trip Rep and then Media and Promotions manager. During this time I took on roles from organising transport and designing posters to Orgamising a trip to Portugal for over 30 students.</p>
+                <p>During my degree at Bristol University I learnt lots of key skill such as team work and project management. Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advantage in my day to day work.</p>
+                <p>While at Bristol Uni I spent a lot of my free time with the Kitesurfing society. I spent 3 years on the committee as a Secreatary, Trip Rep and then Media and Promotions manager. During this time I took on roles from organising transport and designing posters to organising a trip to Portugal for over 30 students.</p>
             </div>
         </div>
     </div>
@@ -137,7 +136,7 @@
         <div class="row clearfix">
             <div class="col-md-12">
                 <p>When I'm not sat at my desk I like to try and be quite active and get outside. I have a great interest in photography and videography, especially of extreme sports, so I like to try and get out to some interesting places and be creative. I like to showcase my work over here if you would like to check it out - <a href="http://jwgmedia.co.uk/" target="_blank">jwgmedia.co.uk</a>.</p>
-                <p>Since my time at Uni I have also become a very keen Kitesurfer and freestyle Landboarder. In 2014 I competed and won the amature landboard British powerkite tour.</p>
+                <p>Since my time at Uni I have also become a very keen Kitesurfer and freestyle Landboarder. In 2014 I competed and won the amateur landboard British powerkite tour.</p>
                 <p>Finaly during the rest of my free time you will either find me out on my road bike, rock climbing at one of Bristols indoor climbing centers or down the Rec supporting Bath Rugby.</p>
             </div>
         </div>
