--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h4>Nudge Digital</h4>
                 <a href="http://www.nudgedigital.co.uk/" target="_blank">www.nudgedigital.co.uk</a>
                 <p>August 2014 - Present</p>
-                <p>Developer</p>
+                <p><b>Developer</b></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p>Over the past year with nudge I have been able to work on a large number of projects ranging from small Drupal sites to large enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations. At Nudge I have also been given the oppertunity to work with all of my core skills and also to gain new skills in things such as <kbd>Symfony</kbd>, <kbd>Angular</kbd> and <kbd>Gulp</kbd>.</p>
@@ -107,7 +107,7 @@
                 <h4>GWS Media</h4>
                 <a href="http://www.gwsmedia.com/" target="_blank">www.gwsmedia.com/</a>
                 <p>June 2012 - August 2014</p>
-                <p>Programmer</p>
+                <p><b>Programmer</b></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p>I started working for GWS Media part time during my third year at University and continued full time once I had graduated. It was during this role that I learnt many of the fundamentals that I have been building on over the past 3 years. Whilst at GWS I had the opportunity to work with: <kbd>Drupal</kbd>, <kbd>Magento</kbd>, <kbd>Bootstrap</kbd>, <kbd>Codeigniter</kbd>, <kbd>Android</kbd> and <kbd>iOS</kbd>.</p>
@@ -122,7 +122,7 @@
             <div class="col-xs-12 col-sm-4 col-md-3 left-column">
                 <h4>Bristol University</h4>
                 <p>2010 - 2013</p>
-                <p>BSc Computer Science</p>
+                <p><b>BSc Computer Science</b></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p>During my degree at Bristol University I learnt lots of key skill such as team work and project management. Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advantage in my day to day work.</p>
