Fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p class="quote">Forecastr is an android app designed to make it easy to view the forecast at your favourite spots. Targeted at sports where the weather is key to a good session forecastr makes it quick to see which spot is best all on one screen. Forecastr includes wind, weather, swell and tide times.</p>
-                <p>Forecastr is an app I have been building as I have a keen interest in <kbd>Android</kbd> development and wanted a personal project I could use to help build my skills. I choose to build this app as I felt like it's something I would use myself and also something that would set some good challenges across lots of different areas of the build.</p>
+                <p>Forecastr is an app I have been building as I have a keen interest in <kbd>Android</kbd> development and wanted a personal project I could use to help build my skills. I chose to build this app as I felt like it's something I would use myself and also something that would set some good challenges across lots of different areas of the build.</p>
                 <p>During the build I have utilised a number of different android libraries such as ActionBarSherlock, Dagger and Otto. As well as these the app also talks to a backend API and uses a SQLite DB.</p>
             </div>
         </div>
@@ -81,7 +81,7 @@
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p class="quote">itsgoingto.be is a simple voting site where a user can ask a question or topic top put to a vote. This question can then be shared with their friends/colleagues to vote on things like 'Where should we go for lunch?'.</p>
                 <p>The backend for this site has been build using <kbd>Symfony</kbd> while on the front-end I have used <kbd>SASS</kbd>, Bourbon.io, Neat and <kbd>JQuery</kbd>. The front-end assets are being compiled and minified using <kbd>Gulp</kbd> so this can be easily auto-deployed on <kbd>Heroku</kbd></p>
-                <p>I have really enjoyed working on this project as I have been able to create a really nice codebase that is fun to work with, and also play with some nice components that I wouldn't usually have the time to work with.</p>
+                <p>I have really enjoyed working on this project as I have been able to create a really nice codebase that is fun to work with, and also play with some new components that I wouldn't usually have the time to work with.</p>
             </div>
         </div>
     </div>
@@ -137,7 +137,7 @@
             <div class="col-md-12">
                 <p>When I'm not sat at my desk I like to try and be quite active and get outside. I have a great interest in photography and videography, especially of extreme sports, so I like to try and get out to some interesting places and be creative. I like to showcase my work over here if you would like to check it out - <a href="http://jwgmedia.co.uk/" target="_blank">jwgmedia.co.uk</a>.</p>
                 <p>Since my time at Uni I have also become a very keen Kitesurfer and freestyle Landboarder. In 2014 I competed and won the amateur landboard British powerkite tour.</p>
-                <p>Finaly during the rest of my free time you will either find me out on my road bike, rock climbing at one of Bristols indoor climbing centers or down the Rec supporting Bath Rugby.</p>
+                <p>Finally during the rest of my free time you will either find me out on my road bike, rock climbing at one of Bristols indoor climbing centers or down the Rec supporting Bath Rugby.</p>
             </div>
         </div>
     </div>
