--- a/index.html
+++ b/index.html
@@ -90,9 +90,21 @@
         <h3>Experience</h3>
         <div class="row clearfix">
             <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+                <h4>Simitive</h4>
+                <a href="http://www.simitive.com/" target="_blank">www.simitive.com</a>
+                <p>November 2015 - Present</p>
+                <p><b>Developer</b></p>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-9">
+                <p>Working as part of an agile team building our own in house web based software and also for external clients. I have been gaining lots of experience working with a continuous integration workflow using tools such as <kbd>Jenkins</kbd> building software using <kbd>Symfony</kbd>, <kbd>Backbone</kbd>, <kbd>Marionette</kbd> and <kbd>Vue</kbd>.</p>
+            </div>
+        </div>
+        
+        <div class="row clearfix">
+            <div class="col-xs-12 col-sm-4 col-md-3 left-column">
                 <h4>Nudge Digital</h4>
                 <a href="http://www.nudgedigital.co.uk/" target="_blank">www.nudgedigital.co.uk</a>
-                <p>August 2014 - Present</p>
+                <p>August 2014 - November 2015</p>
                 <p><b>Developer</b></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
