--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
                 <p><b>Developer</b></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>Working as part of an agile team building our own in house web based software and also for external clients. I have been gaining lots of experience working with a continuous integration workflow using tools such as <kbd>Jenkins</kbd> building software using <kbd>Symfony</kbd>, <kbd>Backbone</kbd>, <kbd>Marionette</kbd> and <kbd>Vue</kbd>.</p>
+                <p>I have been working as part of an agile team building our own in house web based software and also a large scale website for an international client. I have been gaining experience working with continuous integration workflow using tools such as <kbd>Jenkins</kbd>, working with Amazon Web Services and building software using <kbd>Symfony</kbd>, <kbd>Backbone</kbd>, <kbd>Marionette</kbd>, <kbd>Vue</kbd> and <kbd>Vuex</kbd>.</p>
+                <p>For most of my time I have been working on delivering one web product for a international client that services over 600,000 users. This has been built from the ground up using <kbd>Symfony</kbd> to provide a backend API and Backbone for the front end. I also gained a lot of experience with <kbd>Elasticsearch</kbd> to provide search functionality of millions of entities to the front end. During the project I spent time out of hours communicating with the client and performing support.</p>
+                <p>I am currently working in a team of 4 working on building internal web software this time using <kbd>Vue</kbd> and <kbd>Vuex</kbd> for the front end application. I am constantly providing input into the projects from a functionality and technical side which I feel makes me a very valuable asset to the team.</p>
             </div>
         </div>
         
-        <div class="row clearfix">
+        <div class="row clearfix project-2">
             <div class="col-xs-12 col-sm-4 col-md-3 left-column">
                 <h4>Nudge Digital</h4>
                 <a href="http://www.nudgedigital.co.uk/" target="_blank">www.nudgedigital.co.uk</a>
