--- a/index.html
+++ b/index.html
@@ -88,7 +88,19 @@
 
     <div class="container work-container">
         <h3>Experience</h3>
+
         <div class="row clearfix">
+            <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+                <h4>Freelance</h4>
+                <p>September 2016 - October 2016</p>
+                <p><b>Android Development</b></p>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-9">
+                <p>I was asked to update an existing Android app to the latest version of Android and to fix any issues caused by this as well as a few other existing issues. This project had a very tight time scale and I was able to complete it in very good time while providing regular updates to the client.</p>
+            </div>
+        </div>
+
+        <div class="row clearfix project-2">
             <div class="col-xs-12 col-sm-4 col-md-3 left-column">
                 <h4>Simitive</h4>
                 <a href="http://www.simitive.com/" target="_blank">www.simitive.com</a>
