some updates and picture change

--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p>I have been working as part of an agile team building our own in house web based software and also a large scale website for an international client. I have been gaining experience working with continuous integration workflow using tools such as <kbd>Jenkins</kbd>, working with Amazon Web Services and building software using <kbd>Symfony</kbd>, <kbd>Backbone</kbd>, <kbd>Marionette</kbd>, <kbd>Vue</kbd> and <kbd>Vuex</kbd>.</p>
-                <p>For most of my time I have been working on delivering one web product for a international client that services over 600,000 users. This has been built from the ground up using <kbd>Symfony</kbd> to provide a backend API and Backbone for the front end. I also gained a lot of experience with <kbd>Elasticsearch</kbd> to provide search functionality of millions of entities to the front end. During the project I spent time out of hours communicating with the client and performing support.</p>
+                <p>For 6 months I was working on delivering a standalone web product for an international client that services over 600,000 users. This has been built from the ground up using <kbd>Symfony</kbd> to provide a backend API and Backbone for the front end. I also gained a lot of experience with <kbd>Elasticsearch</kbd> to provide search functionality of millions of entities to the front end. During the project I spent time out of hours communicating with the client, performing deployments and providing support.</p>
                 <p>I am currently working in a team of 4 working on building internal web software this time using <kbd>Vue</kbd> and <kbd>Vuex</kbd> for the front end application. I am constantly providing input into the projects from a functionality and technical side which I feel makes me a very valuable asset to the team.</p>
+                <p>More recently I have been assisting with the company's devOps, this includes managing our <kbd>AWS</kbd> infrastructure as well as deploying and migrating sites. I am also configuring and maintaining our clients SSO, this mostly involves configuring new clients who are using <kbd>AD FS</kbd>, <kbd>Shibboleth</kbd> and <kbd>CAS</kbd> but also maintaining our software's SSO functionality.</p>
             </div>
         </div>
 
@@ -113,7 +114,7 @@
                 <p>I was asked to update an existing Android app to the latest version of Android and to fix any issues caused by this as well as a few other existing issues. This project had a very tight time scale and I was able to complete it in very good time while providing regular updates to the client.</p>
             </div>
         </div>
-        
+
         <div class="row clearfix project-2">
             <div class="col-xs-12 col-sm-4 col-md-3 left-column">
                 <h4>Nudge Digital</h4>
@@ -122,8 +123,8 @@
                 <p><b>Developer</b></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>Over the past year with nudge I have been able to work on a large number of projects ranging from small Drupal sites to large enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations. At Nudge I have also been given the oppertunity to work with all of my core skills and also to gain new skills in things such as <kbd>Symfony</kbd>, <kbd>Angular</kbd> and <kbd>Gulp</kbd>.</p>
-                <p>During my time at Nudge I have also been able to help the lead developer with the writing of Technical Specifications and also Project Requirements. I feel this is a useful skill to have as it helps me to become an even more well-rounded developer.</p>
+                <p>While working at nudge I was able to work on a large number of projects ranging from small Drupal sites to large enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations. At Nudge I was also given the oppertunity to work with all of my core skills and to gain new skills in things such as <kbd>Symfony</kbd>, <kbd>Angular</kbd> and <kbd>Gulp</kbd>. I also worked on a number of <kbd>iOS</kbd> and <kbd>Android</kbd> applications.</p>
+                <p>During my time at Nudge I was able to help the lead developer with the writing of Technical Specifications and also Project Requirements. I feel this is a useful skill to have as it helps me to become an even more well-rounded developer.</p>
                 <p>During the summer I had the opportunity to head to Accra, Ghana and work with the team out there. This was a great opportunity to learn more about the industry in another country but also to allow me to lead their team for a few weeks and gain lots of experience of remote teams.</p>
             </div>
         </div>
@@ -152,7 +153,7 @@
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
                 <p>During my degree at Bristol University I learnt lots of key skill such as team work and project management. Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advantage in my day to day work.</p>
-                <p>While at Bristol Uni I spent a lot of my free time with the Kitesurfing society. I spent 3 years on the committee as a Secreatary, Trip Rep and then Media and Promotions manager. During this time I took on roles from organising transport and designing posters to organising a trip to Portugal for over 30 students.</p>
+                <p>While at Bristol Uni I spent a lot of my free time with the Kitesurfing society. I spent 3 years on the committee as a secretary, trip rep and then media and promotions manager. During this time I took on roles from organising transport and designing posters to organising a trip to Portugal for over 30 students.</p>
             </div>
         </div>
     </div>
@@ -161,9 +162,9 @@
         <h3>When I'm not programming</h3>
         <div class="row clearfix">
             <div class="col-md-12">
-                <p>When I'm not sat at my desk I like to try and be quite active and get outside. I have a great interest in photography and videography, especially of extreme sports, so I like to try and get out to some interesting places and be creative. I like to showcase my work over here if you would like to check it out - <a href="http://jwgmedia.co.uk/" target="_blank">jwgmedia.co.uk</a>.</p>
-                <p>Since my time at Uni I have also become a very keen Kitesurfer and freestyle Landboarder. In 2014 I competed and won the amateur landboard British powerkite tour.</p>
-                <p>Finally during the rest of my free time you will either find me out on my road bike, rock climbing at one of Bristols indoor climbing centers or down the Rec supporting Bath Rugby.</p>
+                <p>When I'm not sat at my desk I am very active and spend most of my time outdoors. I do a lot a sports such as mountain biking, road cycling, kitesuring and landboarding as well as trying to make time for things like rock climbing and playing some rugby. Since my time at Uni I have become a very keen Kitesurfer and freestyle Landboarder. In 2014 I competed and won the amateur landboard British powerkite tour.</p>
+                <p>I am very interested in photography and videography as I like to be creative. This is mainly through sport but I enjoy landscape and abstract photography too. I like to showcase my work on my website and instagram if you would like to take a look - <a href="http://jwgmedia.co.uk/" target="_blank">jwgmedia.co.uk</a> / <a href="https://www.instagram.com/jameswgrant/" target="_blank">jameswgrant</a>.</p>
+                <p>Finally during the rest of my free time you will either find me working on my bikes, rock climbing at one of Bristol's indoor climbing centres or down the Rec supporting Bath Rugby.</p>
             </div>
         </div>
     </div>
