--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <span class="jg-img"></span>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                <p>Hi, my name is James Grant. I'm a full stack web and mobile app developer with 4 years experience based in the west country. I am currently working for Nudge Digital where I have been building a variety of different products from <kbd>Drupal</kbd> sites to <kbd>Android</kbd> and <kbd>iOS</kbd> apps while also working with MVC frameworks such as <kbd>CodeIgniter</kbd> and <kbd>Symfony</kbd>.</p>
+                <p>Hi, my name is James Grant. I'm a full stack web and mobile app developer with 4 years experience based in the west country. I am currently working for Simitive where I have been building our SAS products with a <kbd>Symfony</kbd> API and a <kbd>VueJS</kbd> front-end. We are also utilising <kbd>Elasticsearch</kbd>, CI, and AWS products.</p>
 
                 <p>I like making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience. I have worked with a range of different languages and frameworks and I am always looking for opportunities to work with something new. The things that I have the most experience working with are:</p>
-                <p><kbd>PHP</kbd>, <kbd>MySQL</kbd>, <kbd>Drupal</kbd>, <kbd>Symfony</kbd>, <kbd>Android</kbd>, <kbd>iOS</kbd>, <kbd>CodeIgniter</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>JQuery</kbd>, <kbd>Angular</kbd>, <kbd>git</kbd> and <kbd>Gulp</kbd>.</p>
+                <p><kbd>PHP</kbd>, <kbd>MySQL</kbd>, <kbd>Symfony</kbd>, <kbd>VueJs</kbd>, <kbd>Elasticsearch</kbd>, <kbd>Backbone</kbd>, <kbd>Android</kbd>, <kbd>iOS</kbd>, <kbd>Shibboleth</kbd>, <kbd>AD FS</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>Angular</kbd>, <kbd>git</kbd>, <kbd>Gulp</kbd> and <kbd>AWS</kbd> services.</p>
             </div>
         </div>
     </div>
