Sass improvements and profile image

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ layout: home
     <h3>About Me</h3>
     <div class="row clearfix">
         <div class="col-xs-12 col-sm-4 col-md-3">
-            <span class="jg-img"></span>
+            <span class="jg-img"><img src="{{ '/assets/jg.jpg' | relative_url }}" /></span>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9">
             <p>Hi, my name is James Grant. I'm a full stack web and mobile app developer with 4 years experience based in the
                 west country. I am currently working for Simitive where I have been building our SAS products with a
-                <kbd>Symfony</kbd> API and a <kbd>VueJS</kbd> front-end. We are also utilising<kbd>Elasticsearch</kbd>, CI, and AWS products.</p>
+                <kbd>Symfony</kbd> API and a <kbd>VueJS</kbd> front-end. We are also utilising <kbd>Elasticsearch</kbd>, CI, and AWS products.</p>
 
             <p>I like making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience.
                 I have worked with a range of different languages and frameworks and I am always looking for opportunities
