--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: home
 ---
 
@@ -9,19 +6,29 @@ layout: home
     <h3>About Me</h3>
     <div class="row clearfix">
         <div class="col-xs-12 col-sm-4 col-md-3">
-            <span class="jg-img"><img src="{{ '/assets/jg.jpg' | relative_url }}" /></span>
+            <span class="jg-img">
+                <img src="{{ '/assets/jg.jpg' | relative_url }}" />
+            </span>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9">
-            <p>Hi, my name is James Grant. I'm a full stack web and mobile app developer with 4 years experience based in the
-                west country. I am currently working for Simitive where I have been building our SAS products with a
-                <kbd>Symfony</kbd> API and a <kbd>VueJS</kbd> front-end. We are also utilising <kbd>Elasticsearch</kbd>, CI, and AWS products.</p>
+            <p>Hi, my name is James Grant, I'm a full stack web and mobile app developer with 5+ years experience based in the South West.
+                I am currently working for the Royal Bank of Scotland as a frontend software engineer on a comercial banking platform.
 
-            <p>I like making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience.
+            <p>I enjoy making clean and interactive UI that is quick and easy to use whilst also giving users an enjoyable experience.
                 I have worked with a range of different languages and frameworks and I am always looking for opportunities
-                to work with something new. The things that I have the most experience working with are:</p>
-            <p><kbd>PHP</kbd>, <kbd>MySQL</kbd>, <kbd>Symfony</kbd>, <kbd>VueJs</kbd>, <kbd>Elasticsearch</kbd>, <kbd>Backbone</kbd>, <kbd>Android</kbd>,
-                 <kbd>iOS</kbd>, <kbd>Shibboleth</kbd>, <kbd>AD FS</kbd>, <kbd>SASS</kbd>, <kbd>JS</kbd>, <kbd>Angular</kbd>, <kbd>git</kbd>, <kbd>Gulp</kbd>
-                 and <kbd>AWS</kbd> services.</p>
+                to work with something new. The things that I currently have the most experience working with are:</p>
+            <p>
+                <kbd>PHP</kbd>,
+                <kbd>ES6 Javascript</kbd>,
+                <kbd>Java</kbd>,
+                <kbd>MySQL</kbd>,
+                <kbd>React &amp; Redux</kbd>,
+                <kbd>Symfony</kbd>,
+                <kbd>Android</kbd>,
+                <kbd>SASS</kbd>,
+                <kbd>git</kbd> and
+                <kbd>AWS</kbd> services.
+            </p>
         </div>
     </div>
 </div>
@@ -29,6 +36,32 @@ layout: home
 <div class="container projects-container">
     <h3>Projects</h3>
     <div class="row clearfix">
+        <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+            <h4>itsgoingto.be</h4>
+            <a href="http://www.itsgoingto.be/" target="_blank">itsgoingto.be</a>
+            </br>
+            </br>
+            <a href="https://github.com/sproogen/itsgoingto.be" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+        </div>
+        <div class="col-xs-12 col-sm-8 col-md-9">
+            <p class="quote">itsgoingto.be is a simple voting site where a user can ask a question or topic top put to a vote. This question
+                can then be shared with their friends/colleagues to vote on things like 'Where should we go for lunch?'.</p>
+
+            <p>The API for this site has been build using <kbd>Symfony</kbd> while the front end is a <kbd>React</kbd>/<kbd>Redux</kbd> app.
+                I have used <kbd>Docker</kbd> to set up a development environment and <kbd>Heroku</kbd> to deploy and host the site. I have
+                a suite of unit and API tests for the backend and unit tests for the fronted.
+            </p>
+            <p>I have been using this project as a way to increase many of my skills and also learn new things. I have particually
+                enjoyed managing my own project and designing my own architecture and implementing this to a high standard.</p>
+
+            <p>Feel free to check out the whole project on Github to get a feel for how I work
+                <a href="https://github.com/sproogen/itsgoingto.be" target="_blank">here</a>.</p>
+        </div>
+    </div>
+
+    <div class="row clearfix project-2">
         <div class="col-xs-12 col-sm-4 col-md-3 left-column">
             <h4>Forecastr</h4>
             <a href="http://forecastr.co.uk/" target="_blank">forecastr.co.uk</a>
@@ -42,37 +75,14 @@ layout: home
             <p class="quote">Forecastr is an android app designed to make it easy to view the forecast at your favourite spots. Targeted at
                 sports where the weather is key to a good session forecastr makes it quick to see which spot is best all
                 on one screen. Forecastr includes wind, weather, swell and tide times.</p>
+
             <p>Forecastr is an app I have been building as I have a keen interest in
                 <kbd>Android</kbd> development and wanted a personal project I could use to help build my skills. I chose to build
                 this app as I felt like it's something I would use myself and also something that would set some good challenges
                 across lots of different areas of the build.</p>
+
             <p>During the build I have utilised a number of different android libraries such as ActionBarSherlock, Dagger and
                 Otto. As well as these the app also talks to a backend API and uses a SQLite DB.</p>
-        </div>
-    </div>
-
-    <div class="row clearfix project-2">
-        <div class="col-xs-12 col-sm-4 col-md-3 left-column">
-            <h4>itsgoingto.be</h4>
-            <a href="http://www.itsgoingto.be/" target="_blank">itsgoingto.be</a>
-            </br>
-            </br>
-            <a href="https://github.com/sproogen/itsgoingto.be" target="_blank">
-                <i class="fa fa-github"></i>
-            </a>
-        </div>
-        <div class="col-xs-12 col-sm-8 col-md-9">
-            <p class="quote">itsgoingto.be is a simple voting site where a user can ask a question or topic top put to a vote. This question
-                can then be shared with their friends/colleagues to vote on things like 'Where should we go for lunch?'.</p>
-            <p>The backend for this site has been build using
-                <kbd>Symfony</kbd> while on the front-end I have used
-                <kbd>SASS</kbd>, Bourbon.io, Neat and
-                <kbd>JQuery</kbd>. The front-end assets are being compiled and minified using
-                <kbd>Gulp</kbd> so this can be easily auto-deployed on
-                <kbd>Heroku</kbd>
-            </p>
-            <p>I have really enjoyed working on this project as I have been able to create a really nice codebase that is fun
-                to work with, and also play with some new components that I wouldn't usually have the time to work with.</p>
         </div>
     </div>
 </div>
@@ -82,35 +92,41 @@ layout: home
 
     <div class="row clearfix">
         <div class="col-xs-12 col-sm-4 col-md-3 left-column">
+            <h4>Royal Bank of Scotland</h4>
+            <p>August 2017 - Present</p>
+            <p>
+                <b>Software Engineer</b>
+            </p>
+        </div>
+        <div class="col-xs-12 col-sm-8 col-md-9">
+
+        </div>
+    </div>
+
+    <div class="row clearfix project-2">
+        <div class="col-xs-12 col-sm-4 col-md-3 left-column">
             <h4>Simitive</h4>
             <a href="http://www.simitive.com/" target="_blank">www.simitive.com</a>
-            <p>November 2015 - Present</p>
+            <p>November 2015 - August 2017</p>
             <p>
                 <b>Developer</b>
             </p>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9">
-            <p>I have been working as part of an agile team building our own in house web based software and also a large scale
-                website for an international client. I have been gaining experience working with continuous integration workflow
-                using tools such as
-                <kbd>Jenkins</kbd>, working with Amazon Web Services and building software using
-                <kbd>Symfony</kbd>,
-                <kbd>Backbone</kbd>,
-                <kbd>Marionette</kbd>,
-                <kbd>Vue</kbd> and
-                <kbd>Vuex</kbd>.</p>
+            <p>During my time at Simitive I worked as part of an agile team building our own in house web based software and
+                also a large scale website for an international client. I gained experience working with a continuous integration
+                workflow using tools such as <kbd>Jenkins</kbd> and working with Amazon Web Services for deployments. We built most
+                of our software using <kbd>Symfony</kbd>, <kbd>Backbone</kbd>, <kbd>Marionette</kbd>, <kbd>Vue</kbd> and <kbd>Vuex</kbd>.</p>
+
             <p>For 6 months I was working on delivering a standalone web product for an international client that services over
-                600,000 users. This has been built from the ground up using
-                <kbd>Symfony</kbd> to provide a backend API and Backbone for the front end. I also gained a lot of experience
-                with
-                <kbd>Elasticsearch</kbd> to provide search functionality of millions of entities to the front end. During the
-                project I spent time out of hours communicating with the client, performing deployments and providing support.</p>
-            <p>I am currently working in a team of 4 working on building internal web software this time using
-                <kbd>Vue</kbd> and
-                <kbd>Vuex</kbd> for the front end application. I am constantly providing input into the projects from a functionality
-                and technical side which I feel makes me a very valuable asset to the team.</p>
-            <p>More recently I have been assisting with the company's devOps, this includes managing our
-                <kbd>AWS</kbd> infrastructure as well as deploying and migrating sites. I am also configuring and maintaining
+                600,000 users. This has been built from the ground up using <kbd>Symfony</kbd> to provide a backend API and
+                <kbd>Backbone</kbd> for the front end. I also gained a lot of experience with <kbd>Elasticsearch</kbd> to provide
+                search functionality of millions of entities to the front end. During the project I spent time out of hours
+                communicating with the client, performing deployments and providing support.</p>
+
+            <p>Towards the end of my time at Simitive my role involved assisting with the company's devOps, this included managing
+                our
+                <kbd>AWS</kbd> infrastructure as well as deploying and migrating sites. I also spend time configuring and maintaining
                 our clients SSO, this mostly involves configuring new clients who are using
                 <kbd>AD FS</kbd>,
                 <kbd>Shibboleth</kbd> and
@@ -143,7 +159,7 @@ layout: home
             </p>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9">
-            <p>While working at nudge I was able to work on a large number of projects ranging from small Drupal sites to large
+            <p>While working at Nudge I was able to work on a large number of projects ranging from small Drupal sites to large
                 enterprise level applications. I enjoy being able to work with clients to understand and surpass their expectations.
                 At Nudge I was also given the oppertunity to work with all of my core skills and to gain new skills in things
                 such as
@@ -154,7 +170,8 @@ layout: home
                 <kbd>Android</kbd> applications.</p>
             <p>During my time at Nudge I was able to help the lead developer with the writing of Technical Specifications and
                 also Project Requirements. I feel this is a useful skill to have as it helps me to become an even more well-rounded
-                developer.</p>
+                developer.
+            </p>
             <p>During the summer I had the opportunity to head to Accra, Ghana and work with the team out there. This was a
                 great opportunity to learn more about the industry in another country but also to allow me to lead their
                 team for a few weeks and gain lots of experience of remote teams.</p>
@@ -197,7 +214,7 @@ layout: home
             </p>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9">
-            <p>During my degree at Bristol University I learnt lots of key skill such as team work and project management. Although
+            <p>During my degree at Bristol University I learnt lots of key skills such as team work and project management. Although
                 we mainly focused on software development and the principles of programming I use a lot of these skills to
                 my advantage in my day to day work.</p>
             <p>While at Bristol Uni I spent a lot of my free time with the Kitesurfing society. I spent 3 years on the committee
